xfsprogs-2.0.0 (26 February 2002)
	- Major release to coincide with switch to new extended
	  attributes system call interfaces
	- bumped version of libhandle, added new symbols to use
	  the reworked extended attributes handle ioctl interface
	- xfs_repair in no-modify mode opens the filesystem device
	  read-only now (fix from Chris Pascoe)
	- sync up with recent changes to kernel headers

xfsprogs-1.3.19 (15 February 2002)
	- fix xfs_repair option parsing for external logs
	- add xfs_repair option parsing for realtime device
	- fix xfs_repair version (-V) option - should not
	  require an argument
	- add -V option to usage string
	- document verbose (-v) and -r options in manpage

xfsprogs-1.3.18 (17 January 2002)
	- fix mkfs.xfs buglet in overwriting signatures when run
	  on a regular file

xfsprogs-1.3.17 (14 January 2002)
	- mkfs.xfs overwrites pre-existing filesystem, swap, or md
	  driver signatures.
	- xfs_repair fix to prevent double insertion into the
	  uncertain_inode AVL trees ("avl_insert: duplicate range")
	- xfs_repair fix if the log is corrupted and we can't find
	  the head, don't exit - just proceed on with zeroing it
	- use snprintf instead of sprintf throughout

xfsprogs-1.3.16 (17 December 2001)
	- added text dump type to xfs_db (mkp)
	- removed use of a temporary file in xfs_db when processing
	  commands on the command line - allows xfs_check to be run
	  on read-only root filesystems

xfsprogs-1.3.15 (12 December 2001)
	- reenable the use of the BLKBSZSET ioctl, its baaack
	- sync recent XFS kernel source changes back into libxfs

xfsprogs-1.3.14 (05 December 2001)
	- fix minor debian package version numbering issue
	- add documentation for xfs_db(8) label/uuid commands
	- automatic inode sizing code in mkfs.xfs has been removed
	  (restricting inodes to 32 bits) - Steve's recent kernel
	  changes mean this is no longer an issue
	- fix bug in mkfs.xfs size cross-check for realtime device

xfsprogs-1.3.13 (25 October 2001)